<resources>
    <string name="app_name">CoordinatorLayoutDemo</string>
    <string name="item_flexible_space_example">Flexible space example</string>
    <string name="item_simple_coordinator_example">Simple coordinator example</string>
    <string name="item_googleio_example">Google IO Detail example</string>
    <string name="item_materialup_example">Material up profile example</string>
    <string name="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. \t\tIn mollis est vitae erat laoreet consectetur. Mauris dui mauris, \t\tdictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum, \t\tin elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor. \t\tMorbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum. \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis. \t\tCurabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros. \t\tMauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus, \t\ta pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est. \t\tVestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus. \t\tAliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit, \t\trisus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl, \t\tid efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante. \t\tAenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae, \t\taliquet quis orci. Curabitur maximus augue ut bibendum sagittis.</string>

</resources>
